# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmtw"
version = "1.1.0"
description = "PMTW allows for simple access to Reddit Moderator Toolbox"
readme = "README.md"
authors = [{ name = "adhesiveCheese", email = "adhesiveCheese@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
keywords = ['Reddit', 'Moderator_Toolbox', 'Web Wrapper']
dependencies = ['praw >=7.0']
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/adhesivecheese/pmtw"
